fix #852 footer is behind sidebar and sidebar is cutoff on short pages

--- a/pages/src/docs/src/style.less
+++ b/pages/src/docs/src/style.less
@@ -13,7 +13,7 @@
 }
 
 .disclaimer {
-  margin: 60px 20px 0 260px;
+  margin: 60px 0 0 0;
   border: solid 1px #eecccc;
   background: #fefafa;
   padding: 1em;
@@ -84,10 +84,9 @@
 
 .toolBar {
   .select-none();
-  font-size: 0.825em;
   position: absolute;
   right: 0;
-  top: 66px;
+  top: 66px
   width: 220px;
   color: #888;
   cursor: pointer;
@@ -108,9 +107,7 @@
   font-size: 0.825em;
   height: 100%;
   overflow: hidden;
-  position: absolute;
-  right: 0;
-  top: 50px;
+  float: right;
   width: 220px;
   z-index: 0;
 }
@@ -125,7 +122,7 @@
   box-sizing: border-box;
   height: 100%;
   overflow: auto;
-  padding: 66px 0 100px;
+  padding: 28px 0 100px;
   width: 240px;
 }
 
